Additional test coverage in ImageModules.java